--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,34 +1,45 @@
-site_name: obsidian-mkdocs template
+site_name: Chatbot Challenge 2025 Notes
+repo_url: https://github.com/ChatbotChallengeWinners/Notes
+edit_uri: blob/main/docs/
+use_directory_urls: false
+
 
 theme:
     name: 'material'
+    font:
+      text: Volkov
+    features:
+      - navigation.top
+      - navigation.prune
     palette:
 
     # Light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: pink
+      primary: blue grey
       accent: indigo
       toggle:
-        icon: material/toggle-switch-off-outline
+        icon: material/brightness-7
         name: Switch to dark mode
 
     # Dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: pink
+      primary: amber
       accent: blue
       toggle:
-        icon: material/toggle-switch
+        icon: material/brightness-4
         name: Switch to light mode
 
 # Extensions
 markdown_extensions:
+  - nl2br
   - footnotes
-  # - attr_list
+  - attr_list
   - pymdownx.arithmatex:
       generic: true
   # - pymdownx.superfences
+  - admonition
   # - pymdownx.details
   # - pymdownx.magiclink
   - pymdownx.tasklist:
@@ -40,25 +51,41 @@ markdown_extensions:
   - pymdownx.mark
   - pymdownx.tilde
   - pymdownx.superfences:
+    # make exceptions to highlighting of code:
       custom_fences:
         - name: mermaid
           class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format
-
+          format: !!python/name:mermaid2.fence_mermaid    
   - toc:
       permalink: true
 
 plugins:
+  - mermaid2
   - search
-  - roamlinks
-  - blog
-  - rss:
-      match_path: blog/posts/.* 
-      date_from_meta:
-        as_creation: date
-      categories:
-        - categories
-        - tags
+  - roamlinks 
+  - embed_file 
+  - callouts
+  - awesome-pages
+
+extra_css:
+  - javascripts/mermaid-center.css
+  - javascripts/extra.css
+  - |
+    body {
+      padding-top: 60px; /* Adjust the top padding to make space for the new header */
+    }
+    .md-header-wrapper {
+      display: none; /* Hide the original header */
+    }
+    .custom-header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: #37474F; /* Customize the background color */
+      color: #FFFFFF; /* Customize the text color */
+      padding: 10px 20px; /* Customize padding */
+      z-index: 1000; /* Set a high z-index to ensure it's above other elements */
+    }
 
 extra_javascript:
   - javascripts/mathjax.js
