--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,13 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
-      - uses: actions/cache@v2
+      - uses: actions/cache@v4
         with:
           key: ${{ github.ref }}
           path: .cache
       - run: pip install mkdocs-material
       - run: pip install mkdocs-roamlinks-plugin
-      - run: pip install mkdocs-rss-plugin
-      # - run: pip install mkdocs-mermaid2-plugin
+      - run: pip install mkdocs-mermaid2-plugin
+      - run: pip install mkdocs-embed-file-plugins
+      - run: pip install mkdocs-awesome-pages-plugin
       - run: mkdocs gh-deploy --force
