remove some comments, use api for chroma conversational model

--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,7 +1,9 @@
 dotenv
+beautifulsoup4
 langchain
 langchain-community
 langchain-chroma
 langchain-experimental
+langchain-openai
 streamlit
 streamlit-markdown
